--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -63,6 +63,7 @@
   -khtml-user-select: none;
   -webkit-tap-highlight-color: transparent;
   margin-left: -10px;
+  width: 300px;
 }
 
 .embla__slide {
@@ -118,11 +119,11 @@
 }
 
 .embla__button--prev {
-  left: 17%;
+  left: 4%;
   transform: rotate(-180deg) translate(-50%, 50%);
 }
 
 .embla__button--next {
-  right: 22%;
+  right: 12%;
   transform: rotate(180deg) translate(-50%, 50%);
 }
